@@ -12,6 +12,7 @@ Cacti CHANGELOG
 -issue#4905: Labels on AREA having a colon breaks the gradient creation with an rrdtool error
 -issue#4917: Under certain circumstances Real Time counter gets stuck and does not count down
 -issue#4923: Graph template "duplicate" action does not working - 500 Internal Server Error
+-issue#4927: When running audit_database.php script will fail if cacti password had a ')' in it
 -feature#3131: Button to reindex bad indexes
 -feature#4841: Move the cactid function db_check_reconnect() to lib/database.php for other service oriented scripts
 -feature#4874: Add support for showing business hours
